Update: Fixed Padding Used top padding instead of html to align the Complete Video Confirmation Modal vertically with the Unsaved Changes Confirmation Modal

--- a/example_site/src/components/ConfigurationControls.css
+++ b/example_site/src/components/ConfigurationControls.css
@@ -25,6 +25,10 @@ button.configuration-submit-button {
   transition: opacity 0.3s;
 }
 
+.top-padding {
+  padding-top: 45px;
+}
+
 /* Toggle Switch */
 
 /* The switch - the box around the slider */
